--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <script src="./jquery-2.1.4.min.js" type="text/javascript"></script>
 </head>
 <body>
-<script src="http://comeonplay.net/fbapi.js" type="text/javascript"></script>
+<script src="./fbapi.js" type="text/javascript"></script>
 <!--
   Below we include the Login Button social plugin. This button uses
 eckLoginState();  the JavaScript SDK to present a graphical Login button that triggers
