--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@ function logout(){
 </script>
 </head>
 <body>
-<script src="http://comeonplay.net/fbapi.js" type="text/javascript"></script>
+<script src="./fbapi.js" type="text/javascript"></script>
 <input type="button" onclick="logout()" value="Logout"></input>
 </body>
 </html>
