--- a/login.html
+++ b/login.html
@@ -3,30 +3,10 @@
 <head>
 <script src="./jquery-2.1.4.min.js" type="text/javascript"></script>
 <script type="text/javascript">
-function logout(){
-	FB.logout(
-		function(
-			response
-			)
-		{
-		response.authResponse.accessToken
-		}
-	);
-	setTimeout(
-		function()
-		{
-		FB.getLoginStatus(
-			function(
-				response
-				)
-		{
-		if (response.status !== 'connected') {
-		window.location = './index.html'
-		}
-	}
-	);
-},4000);
-}
+function logout(){FB.logout(function(response){response.authResponse.accessToken});
+setTimeout(function(){
+	FB.getLoginStatus(function(response){
+		if (response.status !== 'connected'){window.location = './index.html'}});},4000);}
 </script>
 </head>
 <body>
