try add login api gets

--- a/login.html
+++ b/login.html
@@ -7,6 +7,14 @@ function logout(){FB.logout(function(response){response.authResponse.accessToken
 setTimeout(function(){
 	FB.getLoginStatus(function(response){
 		if (response.status !== 'connected'){window.location = './index.html'}});},4000);}
+FB.api(
+    "/me",
+    function (response) {
+      if (response && !response.error) {
+        /* handle the result */
+      }
+    }
+);
 </script>
 </head>
 <body>
