--- a/login.html
+++ b/login.html
@@ -8,13 +8,14 @@ setTimeout(function(){
 	FB.getLoginStatus(function(response){
 		if (response.status !== 'connected'){window.location = './index.html'}});},4000);}
 </script>
+<script type="text/javascript">
+function api(){FB.api("/me",function (response){if (response && !response.error){
+}});}
+</script>
 </head>
 <body>
 <script src="./fbapi.js" type="text/javascript"></script>
-<script type="text/javascript">
-FB.api("/me",function (response){if (response && !response.error){
-}});
-</script>
+<input type="button" onclick="api()" value="API"></input>
 <input type="button" onclick="logout()" value="Logout"></input>
 </body>
 </html>
