--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>Login</title>
 <script src="./jquery-2.1.4.min.js" type="text/javascript"></script>
 </head>
 <body>
