--- a/login.html
+++ b/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title></title>
 <script src="./jquery-2.1.4.min.js" type="text/javascript"></script>
 <script type="text/javascript">
 function logout(){FB.logout(function(response){response.authResponse.accessToken});
