By Nathan modify jquery path

--- a/Hackathon/web.html
+++ b/Hackathon/web.html
@@ -38,7 +38,7 @@
     
     <body>
         
-        <nav role="navigation"><div id="facebookblue"><img src="Facebook_logo_(square).png"/>
+        <nav role="navigation"><div id="facebookblue">
         <a id="logo-container" class="brand-logo" style="color:white; font-weight:bold">黑客松</a></div></nav>
 
 	   <a class="waves-effect waves-light btn">SITCON</a>
@@ -51,7 +51,7 @@
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <h4>關於本站</h4>
-          <p class="left-align light">Hello Hackathon;</p>
+          <p class="left-align light">本站用來分析FB按讚數與時間的關係之比較。</p>
         </div>
       </div>
     </div>
@@ -62,7 +62,7 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">免責聲明</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+          <p class="grey-text text-lighten-4">本站所使用之資料，均為Materialize所提供，相關權利為該等網站或合法權利人所有。</p>
         </div>
         <div class="col l3 s12">
           <h5 class="white-text">參與人員</h5>
