--- a/chart_folder/chart.html
+++ b/chart_folder/chart.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<script src="chart.js"></script>
-	<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+	<script src="../jquery-2.1.4.min.js"></script>
 </head>
 <body>
 	<div style="width:30%">
