--- a/Hackathon/web.html
+++ b/Hackathon/web.html
@@ -4,9 +4,12 @@
     <head>
         <meta charset="utf-8">
         <!-- Compiled and minified CSS -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/css/materialize.min.css">
+        <link rel="stylesheet" href="../css/materialize.min.css">
         <!-- Compiled and minified JavaScript -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/js/materialize.min.js"></script>
+        <script src="../js/materialize.min.js"></script>
+        <script src="chart.js"></script>
+        <script src="../js/jquery-2.1.4.min.js"></script>
+    </head>
         <style type="text/css">
 
             body {
