--- a/chart_folder/chart.html
+++ b/chart_folder/chart.html
@@ -12,7 +12,7 @@
 </div>
 	<script>
 	var likehr=[2,3,4,5,6,7,8];
-	//var posthr=[5,5,6,7,5,3,2];
+	var posthr=[5,5,6,7,5,3,2];
 	var lineChartData = 
 	{
 		labels : ["00:00","01:00","02:00","03:00","04:00","05:00","06:00","07:00","08:00","09:00","10:00","11:00","12:00","13:00","14:00","15:00","16:00","17:00","18:00","19:00","20:00","21:00","22:00","23:00"],
@@ -26,12 +26,22 @@
 				pointHighlightFill : "rgba(59,89,152,0.2)",
 				pointHighlightStroke : "rgba(59,89,152,0.2)",
 				data : []
-			}
+			},
+			{
+				label: "Post Count",
+				fillColor : "rgba(151,187,205,0.2)",
+				strokeColor : "rgba(33, 177, 195, 0.5)",
+				pointColor : "rgba(33, 177, 195, 1)",
+				pointStrokeColor : "rgba(33, 177, 195, 0.7)",
+				pointHighlightFill : "rgba(33, 177, 195, 0.7)",
+				pointHighlightStroke : "rgba(33, 177, 195, 0.7)",
+				data : []
+				}
 			]
 	}
 
 			lineChartData.datasets[0].data=likehr;
-			//lineChartData.datasets[1].data=posthr;
+			lineChartData.datasets[1].data=posthr;
 			window.onload = function(){
 		var ctx = document.getElementById("canvas").getContext("2d");
 		window.myLine = new Chart(ctx).Line(lineChartData, {
