Modify directory point to js file and add chart to page

--- a/Hackathon/web.html
+++ b/Hackathon/web.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="../css/materialize.min.css">
         <!-- Compiled and minified JavaScript -->
         <script src="../js/materialize.min.js"></script>
-        <script src="chart.js"></script>
+        <script src="../js/chart.js"></script>
         <script src="../js/jquery-2.1.4.min.js"></script>
     </head>
         <style type="text/css">
@@ -50,6 +50,48 @@
 
        <div class="container">
     <div class="section">
+      <canvas id="canvas"></canvas>
+      <!--add chart script begin-->
+      <script>
+  var likehr=[2,3,4,5,6,7,8];
+  var posthr=[5,5,6,7,5,3,2];
+  var lineChartData = 
+  {
+    labels : ["00:00","01:00","02:00","03:00","04:00","05:00","06:00","07:00","08:00","09:00","10:00","11:00","12:00","13:00","14:00","15:00","16:00","17:00","18:00","19:00","20:00","21:00","22:00","23:00"],
+    datasets : [
+      {
+        label: "average likes",
+        fillColor : "rgba(220,220,220,0.2)",
+        strokeColor : "rgba(59,89,152,0.5)",
+        pointColor : "rgba(59,89,152,1)",
+        pointStrokeColor : "rgba(59,89,152,0.7)",
+        pointHighlightFill : "rgba(59,89,152,0.2)",
+        pointHighlightStroke : "rgba(59,89,152,0.2)",
+        data : []
+      },
+      {
+        label: "Post Count",
+        fillColor : "rgba(151,187,205,0.2)",
+        strokeColor : "rgba(33, 177, 195, 0.5)",
+        pointColor : "rgba(33, 177, 195, 1)",
+        pointStrokeColor : "rgba(33, 177, 195, 0.7)",
+        pointHighlightFill : "rgba(33, 177, 195, 0.7)",
+        pointHighlightStroke : "rgba(33, 177, 195, 0.7)",
+        data : []
+        }
+      ]
+  }
+
+      lineChartData.datasets[0].data=likehr;
+      lineChartData.datasets[1].data=posthr;
+      window.onload = function(){
+    var ctx = document.getElementById("canvas").getContext("2d");
+    window.myLine = new Chart(ctx).Line(lineChartData, {
+      responsive: true
+    });
+  }
+  </script>
+  <!-- chart script end-->
       <div class="row">
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
