--- a/chart_folder/chart.html
+++ b/chart_folder/chart.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
 <head>
-	<script src="chart.js"></script>
-	<script src="../jquery-2.1.4.min.js"></script>
+	<script src="../js/chart.js"></script>
+	<script src="../js/jquery-2.1.4.min.js"></script>
 </head>
 <body>
 	<div style="width:30%">
