--- a/chart_folder/line_c.html
+++ b/chart_folder/line_c.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Line Chart</title>
-		<script src="Chart.js"></script>
+		<script src="../js/Chart.js"></script>
 	</head>
 	<body>
 		<div style="width:30%">
