--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Login</title>
-<script src="./jquery-2.1.4.min.js" type="text/javascript"></script>
+<script src="./js/jquery-2.1.4.min.js" type="text/javascript"></script>
 </head>
 <body>
 <script src="./fbapi.js" type="text/javascript"></script>
