--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Logged in</title>
-<script src="./jquery-2.1.4.min.js" type="text/javascript"></script>
+<script src="./js/jquery-2.1.4.min.js" type="text/javascript"></script>
 <script type="text/javascript">
 function logout(){FB.logout(function(response){response.authResponse.accessToken});
 setTimeout(function(){
