modify some minor changes, use this version as well.

--- a/Hackathon/web.html
+++ b/Hackathon/web.html
@@ -46,7 +46,7 @@
 
 	   <a class="waves-effect waves-light btn" href="http://sitcon.camp/2015/">SITCON網頁</a>
 	   <a class="waves-effect waves-light btn">人氣分析</a>
-	   <a class="waves-effect waves-light btn" href="https://www.facebook.com/SITCONCamp">粉絲專頁</a> 
+	   <a class="waves-effect waves-light btn" href="https://www.facebook.com/SITCONCamp">夏令營粉絲專頁</a> 
 
        <div class="container">
     <div class="section">
@@ -115,15 +115,8 @@
           <h5 class="white-text">參與人員</h5>
           <ul>
             
-            <li><a class="white-text">子期</a></li>
-            <li><a class="white-text">小米</a></li>
-            <li><a class="white-text">林先彥</a></li>
-            <li><a class="white-text">陳彥霖</a></li>
-            <li><a class="white-text">吳宇軒</a></li>
-            <li><a class="white-text">林效鴻</a></li>
-            <li><a class="white-text">林致廷</a></li>
-            <li><a class="white-text">彭琍棱</a></li>
-            <li><a class="white-text">隋昀華</a></li>
+            <li><a class="white-text">子期&nbsp;小米&nbsp;林先彥&nbsp;陳彥霖&nbsp;</li>
+              <li><a class="white-text">吳宇軒&nbsp;林效鴻&nbsp;林致廷&nbsp;彭琍棱&nbsp;隋昀華</a></li>
           </ul>
         </div>
       </div>
