--- a/web.html
+++ b/web.html
@@ -56,8 +56,8 @@
       <div class="row">
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>關於本站</h4>
-          <p class="left-align light">本站用來分析FB按讚數與時間的關係之比較。</p>
+          <h4>Login</h4>
+          <p class="left-align light"></p>
         </div>
       </div>
     </div>
