--- a/web.html
+++ b/web.html
@@ -51,7 +51,7 @@
        <div class="container">
     <div class="section">
       <canvas id="canvas"></canvas>
-      <fb:login-button scope="public_profile,user_posts" onlogin="checkLoginState();FB.getLoginStatus(function(response){if (response.status === 'connected') { window.location = './login.html' };});"><div id="status"></div>
+      <fb:login-button data-size="xlarge" scope="public_profile,user_posts" onlogin="checkLoginState();FB.getLoginStatus(function(response){if (response.status === 'connected') { window.location = './login.html' };});"><div id="status"></div>
 
       <div class="row">
         <div class="col s12 center">
