--- a/index.html
+++ b/index.html
@@ -1,13 +1,98 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Login</title>
-<script src="./js/jquery-2.1.4.min.js" type="text/javascript"></script>
-</head>
-<body>
-<script src="./fbapi.js" type="text/javascript"></script>
-<fb:login-button scope="public_profile,user_posts" onlogin="checkLoginState();FB.getLoginStatus(function(response){if (response.status === 'connected') { window.location = './login.html' };});">
-</fb:login-button>
-<div id="status"></div>
-</body>
+    
+    <head>
+        <meta charset="utf-8">
+        <!-- Compiled and minified CSS -->
+        <link rel="stylesheet" href="./css/materialize.min.css">
+        <!-- Compiled and minified JavaScript -->
+        <script src="./js/materialize.min.js"></script>
+        <script src="./js/chart.js"></script>
+        <script src="./js/jquery-2.1.4.min.js"></script>
+        <style type="text/css">
+
+            body {
+                background-color:#CCEEFF;
+                text-align: center;
+                font-size: 20px;
+                font-family: "微軟正黑體";
+                margin:0;
+            }
+
+            nav .brand-logo {
+                position: relative;
+            }
+
+            .waves-effect {
+                margin: 0 150px;
+            }
+
+            #facebookblue{
+                background-color:#3b5998;
+            }
+
+            body > .container {
+                min-height: 500px;
+            }
+
+        </style>
+    </head>
+    
+    <body>
+        <script src="./fbapi.js" type="text/javascript"></script>
+	
+        <nav role="navigation"><div id="facebookblue">
+        <a id="logo-container" class="brand-logo" style="color:white; font-weight:bold">黑客松</a></div></nav>
+
+	   <a class="waves-effect waves-light btn">SITCON</a>
+	   <a class="waves-effect waves-light btn"><i class="material-icons left"></i>Summer</a>
+	   <a class="waves-effect waves-light btn"><i class="material-icons right"></i>Camp</a> 
+
+       <div class="container">
+    <div class="section">
+      <canvas id="canvas"></canvas>
+      <fb:login-button data-size="xlarge" scope="public_profile,user_posts" onlogin="checkLoginState();FB.getLoginStatus(function(response){if (response.status === 'connected') { window.location = './login.html' };});"><div id="status"></div>
+
+      <div class="row">
+        <div class="col s12 center">
+          <h3><i class="mdi-content-send brown-text"></i></h3>
+          <h4>Login</h4>
+          <p class="left-align light"></p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <footer class="page-footer teal">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">免責聲明</h5>
+          <p class="grey-text text-lighten-4">本站所使用之資料，均為Materialize所提供，相關權利為該等網站或合法權利人所有。</p>
+        </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">參與人員</h5>
+          <ul>
+            <li><a class="white-text">米期</a></li>
+            <li><a class="white-text">林先彥</a></li>
+            <li><a class="white-text">陳彥霖</a></li>
+            <li><a class="white-text">吳宇軒</a></li>
+            <li><a class="white-text">林效鴻</a></li>
+            <li><a class="white-text">林致廷</a></li>
+            <li><a class="white-text">彭琍棱</a></li>
+            <li><a class="white-text">隋昀華</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+      Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+      </div>
+    </div>
+  </footer>
+
+
+    </body>
+
 </html>
