oops, white text seems bad, changing back

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
        <div class="container">
     <div class="section">
-	<h3 class="white-text">Please login to continue</h3>
+	<h3>Please login to continue</h3>
       <canvas id="canvas"></canvas>
       <fb:login-button data-size="xlarge" scope="public_profile,user_posts" onlogin="checkLoginState();FB.getLoginStatus(function(response){if (response.status === 'connected') { window.location = './login.html' };});"><div id="status"></div>
 
