--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
        <div class="container">
       <div class="row">
-      <div class="col s12 center">
+      <div class="col s12">
     <div class="section">
 	<h3>Please login to continue</h3>
       <canvas id="canvas"></canvas>
@@ -59,7 +59,7 @@
       <!--<div class="row">
         <div class="col s12 center">-->
           <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Login</h4>
+          <h4>登入！</h4>
           <p class="left-align light"></p>
         </div>
       </div>
