--- a/login.html
+++ b/login.html
@@ -13,7 +13,9 @@ function checkstatus(){
 setTimeout(function(){
         FB.getLoginStatus(function(response){
                 if (response.status !== 'connected'){
-                	alert("讓我們帶你回首頁吧～");
+                	$(window).load(function() {
+     $('#loading').hide();
+  });
                 	window.location = './index.html';}});},2000);}
 
 </script>
@@ -21,10 +23,34 @@ setTimeout(function(){
 function api(){FB.api("/me",function (response){if (response && !response.error){
 }});}
 </script>
+<style>
+#loading {
+   width: 100%;
+   height: 100%;
+   top: 0px;
+   left: 0px;
+   position: fixed;
+   display: block;
+   opacity: 0.7;
+   background-color: #fff;
+   z-index: 99;
+   text-align: center;
+}
+
+#loading-image {
+  position: absolute;
+  top: 100px;
+  left: 240px;
+  z-index: 100;
+}
+</style>
 </head>
 <body onload="checkstatus();">
 <script src="./fbapi.js" type="text/javascript"></script>
 <input type="button" onclick="api()" value="API"></input>
 <input type="button" onclick="logout()" value="Logout"></input>
+<div id="loading">
+  <img id="loading-image" src="./Processing.gif" alt="Loading..." />
+</div>
 </body>
 </html>
