--- a/login.html
+++ b/login.html
@@ -11,14 +11,10 @@ setTimeout(function(){
 			window.location = './index.html'}});},2000);}
 function checkstatus(){
 setTimeout(function(){
-	$(window).load(function() {
-     $('#loading').hide();
-  });
+	i$('body').append('<img src="Processing.gif"></img>');
         FB.getLoginStatus(function(response){
                 if (response.status !== 'connected'){
-                	$(window).load(function() {
-     $('#loading').show();
-  });
+                	
                 	window.location = './index.html';}});},2000);}
 
 </script>
@@ -26,34 +22,11 @@ setTimeout(function(){
 function api(){FB.api("/me",function (response){if (response && !response.error){
 }});}
 </script>
-<style>
-#loading {
-   width: 100%;
-   height: 100%;
-   top: 0px;
-   left: 0px;
-   position: fixed;
-   display: block;
-   opacity: 0.7;
-   background-color: #fff;
-   z-index: 99;
-   text-align: center;
-}
 
-#loading-image {
-  position: absolute;
-  top: 100px;
-  left: 240px;
-  z-index: 100;
-}
-</style>
 </head>
 <body onload="checkstatus();">
 <script src="./fbapi.js" type="text/javascript"></script>
 <input type="button" onclick="api()" value="API"></input>
 <input type="button" onclick="logout()" value="Logout"></input>
-<div id="loading">
-  <img id="loading-image" src="./Processing.gif" alt="Loading..." />
-</div>
 </body>
 </html>
