--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <!-- Compiled and minified JavaScript -->
         <script src="./js/materialize.min.js"></script>
         <script src="./js/chart.js"></script>
-        <script src="./js/jquery-2.1.4.min.js"></script>
+        <script type="text/javascript" src="./js/jquery-2.1.4.min.js"></script>
         <style type="text/css">
 
             body {
