--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="section">
 	<h3>請先登入以繼續</h3>
       <canvas id="canvas"></canvas>
-      <fb:login-button data-size="xlarge" scope="public_profile,user_posts" onlogin="checkLoginState();FB.getLoginStatus(function(response){if (response.status === 'connected') { window.location = './login.html' };});"><div id="status"></div>
+      <fb:login-button data-size="xlarge" scope="public_profile,user_posts" onlogin="checkLoginState();FB.getLoginStatus(function(response){if (response.status === 'connected') { window.location = './Hackathon/web.html' };});"><div id="status"></div>
 
       <!--<div class="row">
         <div class="col s12 center">-->
