--- a/Hackathon/web.html
+++ b/Hackathon/web.html
@@ -129,7 +129,7 @@ setTimeout(function(){
           <h5 class="white-text">參與人員</h5>
           <ul>
             
-            <li><a class="white-text">子期&nbsp;小米&nbsp;林先彥&nbsp;陳彥霖&nbsp;</li>
+            <li><a class="white-text">子期&nbsp;小米&nbsp;林先彥&nbsp;陳彥霖&nbsp;</a></li>
               <li><a class="white-text">吳宇軒&nbsp;林效鴻&nbsp;林致廷&nbsp;彭琍棱&nbsp;隋昀華</a></li>
           </ul>
         </div>
