--- a/Hackathon/web.html
+++ b/Hackathon/web.html
@@ -61,7 +61,7 @@ setTimeout(function(){
 	   <a class="waves-effect waves-light btn" href="http://sitcon.camp/2015/">SITCON網頁</a>
 	   <a class="waves-effect waves-light btn">人氣分析</a>
 	   <a class="waves-effect waves-light btn" href="https://www.facebook.com/SITCONCamp">夏令營粉絲專頁</a> 
-<input type="button" onclick="logout()" value="Logout"></input>
+<a class="waves-effect waves-ligt btn" onclick="logout()" value="Logout">Logout</a>
        <div class="container">
     <div class="section">
       <canvas id="canvas"></canvas>
