--- a/Hackathon/web.html
+++ b/Hackathon/web.html
@@ -6,9 +6,9 @@
         <!-- Compiled and minified CSS -->
         <link rel="stylesheet" href="../css/materialize.min.css">
         <!-- Compiled and minified JavaScript -->
-        <script src="../js/materialize.min.js"></script>
-        <script src="../js/chart.js"></script>
-        <script src="../js/jquery-2.1.4.min.js"></script>
+        <script src="/js/materialize.min.js"></script>
+        <script src="/js/chart.js"></script>
+        <script src="/js/jquery-2.1.4.min.js"></script>
         <style type="text/css">
 
             body {
@@ -48,7 +48,7 @@ setTimeout(function(){
         FB.getLoginStatus(function(response){
                 if (response.status !== 'connected'){
                         
-                        window.location = '../index.html';}});},2000);}
+                        window.location = '../index.html';}});},0);}
 
 </script>
     </head>
