--- a/getLikesData.html
+++ b/getLikesData.html
@@ -8,8 +8,10 @@
     <script type="text/javascript" src="./facebook-sdk.js"/></script>
     <script type="text/javascript" src="./likesNtimes.js"></script>
     <script type="text/javascript">
-      var new_accessToken = "CAACEdEose0cBACkbFG56bJWqqJbeLINUlssHT6LJpMYsCHMyD7HkP90q3sbLaIXrZAZASY0ySqz3GvtloCJrUVcaWbkutlrNLaIQBZAdzXy4kJIHC2uzAM1nF9Ez4h2ZCqOolWB3bX4Fk3Nb68ZARaNSuydKuP0evMY9ZBHNP6n6wM3bsyE65v1mJXjv7ZC2hRZAehaYxsjunu1Bn0l0ZBCbKfMPodY0LjYIZD"
-      getAllthings_v2(new_accessToken)
+      var new_accessToken = "CAACEdEose0cBAPeFOBw1MtUAq6ZBqOL0sWB38ai64hSaK5HGKaCRZCdLZBDKj2xxLTMLwRjGx0YbFMWEfVGUjR06GmLZAnaoHXailfHjctaZCvHq9m4QUTkoEwQjZCIjuBIcPLv60zaY2O8IKkKmPsjrNJ9UhgloZBwMW0qWVxlpZAoOl1XjQuioQVcf0niZAk6fwSAZAR0fumFmyUAbozK4dYHpILWLoVBLgZD"
+      var result = 1;
+      var a = 1;
+
     </script>
   </head>
   <body>
